@@ -1,3 +1,12 @@
+2008-03-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Make MpegTSSplitter inherit from DVBTSProducer so the
+	bus message handling is re-used.
+	DVB now chains up its configure_pipeline to DVBTSProducer
+	to reduce code duplication and also no longer duplicates
+	init method.
+
 2008-03-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/admin_gtk.py:
